update tests/Makefile, add rngtest-fortuna to tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,17 +3,20 @@ PREFIX?=	/usr/local
 ECHO?=		echo
 CFLAGS?=	-Werror -Wall -O2 
 
-all: test-static test-shared test-image
+all: test-static test-shared test-image rngtest-fortuna
 
 test-static:
-	cc -I$(PREFIX)/include $(CFLAGS) -o test-fortuna-static test-fortuna.c $(PREFIX)/lib/libfortuna.a
+	$(CC) -I$(PREFIX)/include $(CFLAGS) -o test-fortuna-static test-fortuna.c $(PREFIX)/lib/libfortuna.a
 
 test-shared:
-	cc -I$(PREFIX)/include $(CFLAGS) -o test-fortuna-shared test-fortuna.c -L$(PREFIX)/lib -lfortuna
+	$(CC) -I$(PREFIX)/include $(CFLAGS) -o test-fortuna-shared test-fortuna.c -L$(PREFIX)/lib -lfortuna
 
 test-image:
-	cc -I$(PREFIX)/include $(CFLAGS) -I$(PREFIX)/include/ImageMagick -o greygrid greygrid.c -L$(PREFIX)/lib -lfortuna -lMagickWand
-	cc -I$(PREFIX)/include $(CFLAGS) -I$(PREFIX)/include/ImageMagick -o colorgrid colorgrid.c -L$(PREFIX)/lib -lfortuna -lMagickWand
+	$(CC) -I$(PREFIX)/include $(CFLAGS) -I$(PREFIX)/include/ImageMagick -o greygrid greygrid.c -L$(PREFIX)/lib -lfortuna -lMagickWand
+	$(CC) -I$(PREFIX)/include $(CFLAGS) -I$(PREFIX)/include/ImageMagick -o colorgrid colorgrid.c -L$(PREFIX)/lib -lfortuna -lMagickWand
+
+rngtest-fortuna:
+	$(CC) -I$(PREFIX)/include $(CFLAGS) -o rngtest-fortuna rngtest-fortuna.c $(PREFIX)/lib/libfortuna.a
 
 clean:
 	rm -f test-fortuna-static
@@ -22,6 +25,7 @@ clean:
 	rm -f colorgrid
 	rm -f randcolorimage.png
 	rm -f randgreyimage.png
+	rm -f rngtest-fortuna
 
 run-tests:
 
